fixed features page aos on mobile devices

--- a/static/assets/css/public/style.css
+++ b/static/assets/css/public/style.css
@@ -955,12 +955,12 @@ video {
   height: 100vh;
 }
 
-.h-7 {
-  height: 1.75rem;
-}
-
 .h-10 {
   height: 2.5rem;
+}
+
+.h-7 {
+  height: 1.75rem;
 }
 
 .min-h-\[64px\] {
@@ -1043,12 +1043,12 @@ video {
   width: 100%;
 }
 
-.w-7 {
-  width: 1.75rem;
-}
-
 .w-10 {
   width: 2.5rem;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .max-w-64 {
@@ -1380,11 +1380,6 @@ video {
   border-color: rgb(239 68 68 / var(--tw-border-opacity, 1));
 }
 
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
-}
-
 .bg-\[\#00000000\] {
   background-color: #00000000;
 }
@@ -1486,22 +1481,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[\#24292F\]\/90 {
-  background-color: rgb(36 41 47 / 0.9);
-}
-
-.bg-\[\#24292F\]\/30 {
-  background-color: rgb(36 41 47 / 0.3);
-}
-
-.bg-\[\#ffffffb4\] {
-  background-color: #ffffffb4;
-}
-
-.bg-\[\#adacacb4\] {
-  background-color: #adacacb4;
-}
-
 .bg-\[\#ebebebb4\] {
   background-color: #ebebebb4;
 }
@@ -1524,10 +1503,6 @@ video {
 
 .fill-black {
   fill: #000;
-}
-
-.fill-lime-400 {
-  fill: #a3e635;
 }
 
 .stroke-black {
@@ -1654,11 +1629,6 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
 }
 
 .pb-3 {
@@ -1852,11 +1822,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity, 1));
-}
-
 .underline {
   text-decoration-line: underline;
 }
@@ -1874,12 +1839,6 @@ video {
 .shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2245,10 +2204,6 @@ html::-webkit-scrollbar-thumb {
   background-color: rgb(127 29 29 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-\[\#ffffffb4\]:hover {
-  background-color: #ffffffb4;
-}
-
 .hover\:bg-\[\#ffffffe8\]:hover {
   background-color: #ffffffe8;
 }
@@ -2432,22 +2387,14 @@ html::-webkit-scrollbar-thumb {
   background-color: rgb(5 7 8 / 0.3);
 }
 
-.dark\:bg-\[\#24292F\]\/90:is(.dark *) {
-  background-color: rgb(36 41 47 / 0.9);
-}
-
-.dark\:bg-gray-600:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity, 1));
-}
-
 .dark\:bg-\[\#101010\]:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(16 16 16 / var(--tw-bg-opacity, 1));
 }
 
-.dark\:bg-\[\#101010d2\]:is(.dark *) {
-  background-color: #101010d2;
+.dark\:bg-gray-600:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:fill-white:is(.dark *) {
@@ -2492,11 +2439,6 @@ html::-webkit-scrollbar-thumb {
   color: rgb(255 255 255 / 0.5);
 }
 
-.dark\:text-blue-500:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity, 1));
-}
-
 .dark\:placeholder-gray-400:is(.dark *)::-moz-placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(156 163 175 / var(--tw-placeholder-opacity, 1));
@@ -2531,11 +2473,6 @@ html::-webkit-scrollbar-thumb {
 .dark\:hover\:bg-gray-700:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:hover\:bg-\[\#050708\]:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(5 7 8 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:hover\:bg-\[\#24292F\]\/90:hover:is(.dark *) {
